// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryPagination should render empty 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-1j8x01y-0 eqJxNl"
>
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kPmDNE"
  />
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kqcnMI"
  />
</div>
`;

exports[`BinaryPagination should render with data 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-1j8x01y-0 eqJxNl"
>
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kPmDNE"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkArrow-sc-1j8x01y-3 izPinq"
          >
            ←
          </span>
          <span
            className="BinaryPagination__LinkText-sc-1j8x01y-2 iVphVd"
          >
            Prev title
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kqcnMI"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkText-sc-1j8x01y-2 iVphVd"
          >
            Next title
          </span>
          <span
            className="BinaryPagination__LinkArrow-sc-1j8x01y-3 izPinq"
          >
            →
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination should use slug if title not provided 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-1j8x01y-0 eqJxNl"
>
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kPmDNE"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkArrow-sc-1j8x01y-3 izPinq"
          >
            ←
          </span>
          <span
            className="BinaryPagination__LinkText-sc-1j8x01y-2 iVphVd"
          >
            /prev
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kqcnMI"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkText-sc-1j8x01y-2 iVphVd"
          >
            /next
          </span>
          <span
            className="BinaryPagination__LinkArrow-sc-1j8x01y-3 izPinq"
          >
            →
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination shouldn't render without slug 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-1j8x01y-0 eqJxNl"
>
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kPmDNE"
  />
  <div
    className="BinaryPagination__PaginationItem-sc-1j8x01y-1 kqcnMI"
  />
</div>
`;
